--- a/src/style.sass
+++ b/src/style.sass
@@ -4,4 +4,7 @@
 @import "./sass/helpers/mixins"
 @import "./sass/helpers/variables"
 
+@import "./sass/blocks/header"
+@import "./sass/blocks/main"
+@import "./sass/blocks/footer"
 @import "./sass/blocks/event"
