Изменил webpack, добавил стили для десктоп версии шапки и подвала сайта
Добавил svg в wepack, добавил метатег robots, добавил стили шапки и подвала сайта.

--- a/src/sass/base/main.sass
+++ b/src/sass/base/main.sass
@@ -29,6 +29,7 @@ body
   min-width: 320px
   position: relative
   font-family:  $defaultFont
+  font-weight: bold
   overflow-x: hidden
   margin: 0
   padding: 0
