--- a/src/sass/base/layout.sass
+++ b/src/sass/base/layout.sass
@@ -4,8 +4,17 @@
     display: grid
     grid-auto-rows: minmax(auto, 90px) 1fr minmax(auto, 64px)
 
+.page__header
+    width: 100%
+    height: 100%
+    display: flex
+    align-items: center
+    position: relative
+    
 .header-area
-    margin: 32px 40px
+    width: 100%
+    height: 100%
+    margin: 0 40px
     display: flex
     flex-wrap: nowrap
     justify-content: flex-start
@@ -25,6 +34,19 @@
     grid-template-rows:  minmax(171px, auto)
     grid-auto-flow: row dense
 
+.page__footer
+    display: flex
+    align-items: center
+    position: relative
+    width: 100%
+    height: 100%
+
 .footer-area
+    width: 100%
+    height: 100%
     margin: 0 40px
+    display: flex
+    flex-wrap: nowrap
+    justify-content: space-between
+    align-items: center
     
