Изменил верстку событий, добавил стили для событий на декстопе

--- a/src/style.sass
+++ b/src/style.sass
@@ -7,4 +7,4 @@
 @import "./sass/blocks/header"
 @import "./sass/blocks/main"
 @import "./sass/blocks/footer"
-@import "./sass/blocks/event"
+@import "./sass/blocks/event/event"
