--- a/src/sass/blocks/footer.sass
+++ b/src/sass/blocks/footer.sass
@@ -12,6 +12,7 @@
     
 .menu__link
     font-size: 12px
+    line-height: 14px
     font-weight: normal
     color: #858585
     letter-spacing: 0.01px
@@ -25,6 +26,7 @@
 
 .copyright__text
     font-size: 12px
+    line-height: 14px
     color: #858585
     font-weight: normal
     letter-spacing: 0.01px
