Добавил иконку меню на мобайл версии, изменил размеры шрифтов на rem

--- a/src/sass/blocks/event/event__info.sass
+++ b/src/sass/blocks/event/event__info.sass
@@ -44,15 +44,15 @@
         background-image: url(./img/svg/kettle.svg)
 
 .event__title
-    font-size: 24px
-    line-height: 28px
+    font-size: 1.5rem
+    line-height: 1.75rem
     color: inherit
     text-align: left
     margin-left: 17px
 
 .event__main
-    font-size: 18px
-    line-height: 21px
+    font-size: 1.125rem
+    line-height: 1.3125rem
     color: inherit
     text-align: left
     font-weight: normal
@@ -71,17 +71,17 @@
 
 .event__description
     margin-top: 15px
-    font-size: 20px
+    font-size: 1.25rem
     font-weight: normal
-    line-height: 23px
+    line-height: 1.4375rem
     //make Arial similar to ArtialMT
     letter-spacing: 0.25px 
     color: #000000
     text-align: left
 
 .event__description_alert
-    font-size: 24px
-    line-height: 28px
+    font-size: 1.5rem
+    line-height: 1.75rem
     font-weight: normal
     color: #333333
     text-align: left
