--- a/src/sass/blocks/event/event__data.sass
+++ b/src/sass/blocks/event/event__data.sass
@@ -12,8 +12,8 @@
 .event__thermal
     display: flex
     justify-content: flex-start
-    font-size: 18px
-    line-height: 21px
+    font-size: 1.125rem
+    line-height: 1.3125rem
     font-weight: normal
     color: #000000
     text-align: left
@@ -40,9 +40,9 @@
     margin: 0 15px
 
 .player__track
-    font-size: 20px
+    font-size: 1.25rem
     font-weight: normal
-    line-height: 23px
+    line-height: 1.4375rem
     color: #000000
     text-decoration: none
 
@@ -81,12 +81,11 @@
         border-radius: 4.5px
         margin-top: -10px
 
-
 .player__time
     font-family: Helvetica
-    font-size: 14px
+    font-size: 0.875rem
     font-weight: normal
-    line-height: 17px
+    line-height: 1.0625rem
     color: #A1A1A1
     opacity: 0.84
     text-align: left
@@ -149,9 +148,9 @@
 
 .player__volume-value
     font-family: Helvetica
-    font-size: 14px
+    font-size: 0.875rem
     font-weight: normal
-    line-height: 17px
+    line-height: 1.0625rem
     color: #A1A1A1
     opacity: 0.84
     text-align: left
@@ -165,7 +164,7 @@
     border: none
     padding: 15px 0
     text-align: center
-    font-size: 20px
+    font-size: 1.25rem
     line-height: 23px
     color: #000000
     font-weight: bold
