--- a/src/sass/blocks/footer.sass
+++ b/src/sass/blocks/footer.sass
@@ -11,8 +11,8 @@
         transform: translate(-50%)
     
 .menu__link
-    font-size: 12px
-    line-height: 14px
+    font-size: 0.75rem
+    line-height: 0.875rem
     font-weight: normal
     color: #858585
     letter-spacing: 0.01px
@@ -25,8 +25,8 @@
         color: red
 
 .copyright__text
-    font-size: 12px
-    line-height: 14px
+    font-size: 0.75rem
+    line-height: 0.875rem
     color: #858585
     font-weight: normal
     letter-spacing: 0.01px
