--- a/src/sass/blocks/header.sass
+++ b/src/sass/blocks/header.sass
@@ -18,6 +18,11 @@
     background-position: center
     background-size: 100%
 
+.logo__link
+    width: 100%
+    height: 100%
+    display: block
+
 .nav__link
     color: #333333
     line-height: 20px
@@ -31,3 +36,14 @@
     &:hover
         color: red
         opacity: 1
+
+
+.menu__burger
+    width: 16px
+    height: 16px
+    display: none
+    background-image: url("./img/svg/icon_list_m@1x.svg")
+    background-size: 100%
+    background-repeat: no-repeat
+    background-position: center
+    cursor: pointer
