--- a/src/sass/blocks/main.sass
+++ b/src/sass/blocks/main.sass
@@ -1,5 +1,5 @@
 .title
-    font-size: 36px
-    line-height: 42px
+    font-size: 2.25rem
+    line-height: 2.625rem
     color: #333333
     text-align: left
