Добавил миксин для адаптивной типографики, изменил основные шрифты на адаптивные

--- a/src/sass/blocks/event/event__data.sass
+++ b/src/sass/blocks/event/event__data.sass
@@ -46,6 +46,9 @@
     color: #000000
     text-decoration: none
 
+    @include font-size-fluid(18, 20)
+    @include line-height-fluid(21, 23)
+
 .player__timeline-inner
     display: grid
     grid-template-columns: 1fr auto
