--- a/src/sass/blocks/main.sass
+++ b/src/sass/blocks/main.sass
@@ -3,3 +3,6 @@
     line-height: 2.625rem
     color: #333333
     text-align: left
+
+    @include font-size-fluid(28, 36)
+    @include line-height-fluid(42, 28)
