--- a/src/sass/blocks/event/event__info.sass
+++ b/src/sass/blocks/event/event__info.sass
@@ -50,12 +50,19 @@
     text-align: left
     margin-left: 17px
 
+    @include font-size-fluid(14, 24)
+    @include line-height-fluid(17, 28)
+
 .event__main
     font-size: 1.125rem
     line-height: 1.3125rem
     color: inherit
     text-align: left
     font-weight: normal
+
+    @include font-size-fluid(12, 18)
+    @include line-height-fluid(14, 21)
+
 
 .event__source
     min-width: 200px
@@ -78,6 +85,10 @@
     letter-spacing: 0.25px 
     color: #000000
     text-align: left
+    transition: font-size 0.1s ease
+
+    @include font-size-fluid(18, 25)
+    @include line-height-fluid(22, 28)
 
 .event__description_alert
     font-size: 1.5rem
@@ -85,3 +96,6 @@
     font-weight: normal
     color: #333333
     text-align: left
+
+    @include font-size-fluid(18, 24)
+    @include line-height-fluid(22, 28)
