--- a/src/sass/blocks/main.sass
+++ b/src/sass/blocks/main.sass
@@ -6,3 +6,7 @@
 
     @include font-size-fluid(28, 36)
     @include line-height-fluid(42, 28)
+
+.main__title
+    @media screen and (max-width : 570px)
+        margin-top: 0
