--- a/src/sass/blocks/event/event.sass
+++ b/src/sass/blocks/event/event.sass
@@ -2,6 +2,7 @@
 @import "event__info"
     
 .event__item
+    min-width: 200px
     grid-column: auto / span 2
     border-radius: 20px
     background: #fafafa
@@ -47,6 +48,47 @@
             background-repeat: no-repeat
             background-position: center
             background-size: 100%
+            filter: drop-shadow(0px 0px 6px #000000)
+
+.event__item_critical
+    .event__bottom-line
+        padding-top: 5px
+        margin-top: -15px
+    .event__top-line
+        background: #DB5341
+        border-radius: 20px 20px 0 0
+        padding-bottom: 35px
+    &:hover
+        &::before
+            background-image: url("./img/svg/next-white.svg")
+            filter: drop-shadow(0px 0px 3px #000000)
+        &::after
+            background-image: url("./img/svg/cross-white.svg")
+
+.event__item_s
+    grid-column: auto / span 2
+    @media screen and (max-width : 920px)
+        grid-column: auto / span 3
+        .event__main
+            flex-direction: row
+            justify-content: space-between
+    @media screen and (max-width : 510px)
+        grid-column: auto / span 6
+
+.event__item_m
+    grid-column: auto / span 3
+    @media screen and (max-width : 920px)
+        grid-column: auto / span 6
+    @media screen and (max-width : 510px)
+        grid-column: auto / span 6
+
+.event__item_l
+    grid-column: auto / span 4
+    grid-row-end: span 3
+    @media screen and (max-width : 920px)
+        grid-column: auto / span 6
+    @media screen and (max-width : 510px)
+        grid-column: auto / span 6
 
 .event__top-line
     width: 100%
@@ -60,22 +102,3 @@
     padding: 0 20px 
     border-radius: 20px
     background: inherit
-
-.event__item_critical
-    .event__top-line
-        background: #DB5341
-        border-radius: 20px 20px 0 0
-        padding-bottom: 35px
-    .event__bottom-line
-        padding-top: 5px
-        margin-top: -15px
-
-.event__item_s
-    grid-column: auto / span 2
-
-.event__item_m
-    grid-column: auto / span 3
-
-.event__item_l
-    grid-column: auto / span 4
-    grid-row-end: span 3
