--- a/src/sass/blocks/event/event__data.sass
+++ b/src/sass/blocks/event/event__data.sass
@@ -3,8 +3,7 @@
 
 .event__graph
     width: 100%
-    //bad png export from sketch
-    height: 294px
+    height: 100%
     background-repeat: no-repeat
     background-size: cover
     border-radius: 0 0 20px 20px
@@ -37,7 +36,10 @@
 
 .player__info
     width: 100%
-    margin: 0 15px
+    margin-left: 15px
+    white-space: nowrap
+    overflow-x: hidden
+    text-overflow: ellipsis
 
 .player__track
     font-size: 1.25rem
@@ -53,6 +55,7 @@
     display: grid
     grid-template-columns: 1fr auto
     align-items: center
+    min-height: 30px
 
 .player__timeline
     width: 100%
@@ -186,4 +189,7 @@
 
 .event__image
     border-radius: 20px
+    width: 100%
     height: 100%
+    @media screen and (max-width : 570px)
+        min-height: 250px
