--- a/src/sass/blocks/footer.sass
+++ b/src/sass/blocks/footer.sass
@@ -9,7 +9,11 @@
         top: 0
         left: 50%
         transform: translate(-50%)
-    
+
+    @media screen and (max-width : 768px)
+        &::before
+            display: none
+
 .menu__link
     font-size: 0.75rem
     line-height: 0.875rem
@@ -24,6 +28,10 @@
     &:hover
         color: red
 
+    @media screen and (max-width : 768px)
+        margin-left: 0
+        margin-top: 10px
+
 .copyright__text
     font-size: 0.75rem
     line-height: 0.875rem
@@ -31,4 +39,8 @@
     font-weight: normal
     letter-spacing: 0.01px
     text-align: left
+
+    @media screen and (max-width : 768px)
+        margin-top: 10px
+        margin-bottom: 0
     
