--- a/src/sass/blocks/header.sass
+++ b/src/sass/blocks/header.sass
@@ -9,6 +9,9 @@
         bottom: 0
         left: 50%
         transform: translate(-50%)
+    @media screen and (max-width : 768px)
+        &::after
+            display: none
 
 .header__logo
     width: 108px
@@ -47,3 +50,6 @@
     background-repeat: no-repeat
     background-position: center
     cursor: pointer
+
+    @media screen and (max-width : 570px)
+        display: block
