--- a/src/sass/base/layout.sass
+++ b/src/sass/base/layout.sass
@@ -27,7 +27,6 @@
     @media screen and (max-width : 570px)
         justify-content: space-between
     
-
 .header__menu
     margin-left: 21px
     margin-top: 8px
@@ -66,10 +65,10 @@
     flex-wrap: nowrap
     justify-content: space-between
     align-items: center
-
     @media screen and (max-width : 768px)
         flex-direction: column
         align-items: flex-start
+        margin-bottom: 15px
 
 .footer__menu
     display: flex
