--- a/src/sass/blocks/event/event__data.sass
+++ b/src/sass/blocks/event/event__data.sass
@@ -16,6 +16,10 @@
     font-weight: normal
     color: #000000
     text-align: left
+    @include font-size-fluid(14, 18)
+    @include line-height-fluid(16, 21)
+    @media screen and (max-width : 570px)
+        justify-content: space-between
 
 .humidity
     margin-left: 52px
@@ -176,6 +180,8 @@
     font-weight: bold
     &:hover
         box-shadow: 0 2px 6px 0 rgba(197,186,186,0.50)
+    @media screen and (max-width : 350px)
+        min-width: 120px    
 
 .event__btn
     margin-left: 18px
@@ -193,3 +199,15 @@
     height: 100%
     @media screen and (max-width : 570px)
         min-height: 250px
+
+.picture__info
+    display: none
+    flex-direction: row
+    justify-content: space-between
+    margin-top: 10px
+    color: #333333
+    font-weight: normal
+    @include font-size-fluid(12, 18)
+    @include line-height-fluid(14, 21)
+    @media screen and (max-width : 768px)
+        display: flex
