Сделал отображение заголовка в две строки
Использовал line-camp для всех браузеров и max-height для FireFox

--- a/src/sass/blocks/event/event.sass
+++ b/src/sass/blocks/event/event.sass
@@ -92,9 +92,10 @@
 
 .event__top-line
     width: 100%
-    height: 100%
     padding: 20px 20px 0
     border-radius: 20px
+    @media screen and (max-width : 920px)
+        height: 100%
 
 .event__bottom-line
     width: 100%
