Проверил адекватность работы в Yandex browser, Google Chrome, FireFox

--- a/src/sass/base/layout.sass
+++ b/src/sass/base/layout.sass
@@ -4,7 +4,7 @@
     max-width: 1370px
     margin: 0 auto
     display: grid
-    grid-auto-rows: minmax(auto, 60px) 1fr minmax(auto, 64px)
+    grid-template-rows: minmax(auto, 60px) 1fr minmax(auto, 64px)
 
 .page__header
     width: 100%
