--- a/style.css
+++ b/style.css
@@ -515,6 +515,7 @@ body {
   font-size: 1.25rem;
   line-height: 23px;
   color: #000000;
+  user-select: none;
   font-weight: bold; }
   .btn:hover {
     -webkit-box-shadow: 0 2px 6px 0 rgba(197, 186, 186, 0.5);
@@ -559,7 +560,7 @@ body {
   @media screen and (max-width: 1370px) {
     .picture__info {
       line-height: calc(14px + (21 - 14) * ((100vw - 375px) / (1370 - 375))); } }
-  @media screen and (max-width: 768px) {
+  @media (-moz-touch-enabled: 1), (pointer: coarse) {
     .picture__info {
       display: -webkit-box;
       display: -ms-flexbox;
